--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-;
+/*
 #wrapper{
 	display: inline;
 }
@@ -80,4 +79,11 @@ a{
   color: #FFFFFF;
   text-align: center;
 
+}*/
+
+#map{
+	height:100%;
+	width:100%;
+	position: static !important;
+	z-index: 999999;
 }
