--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-;
+
 #wrapper{
 	display: inline;
 }
@@ -80,4 +80,22 @@ a{
   color: #FFFFFF;
   text-align: center;
 
+}
+.showhide{
+	display: none;
+	border-radius: 4px;
+    background-color: #FFFFFF;
+	margin-top:15px;
+}
+
+.list-element-wrapper{
+	border-color: #555555;
+	border-style: solid;
+	border-radius: 4px;
+	border-width: 1px;
+	
+
+}
+.list-element{
+	list-style-type: none;
 }
