--- a/style.css
+++ b/style.css
@@ -81,19 +81,27 @@ a{
 }
 .showhide{
 	display: none;
+	border-color: #555555;
+	border-style: solid;
 	border-radius: 4px;
+	border-width: 1px;
     background-color: #FFFFFF;
 	margin-top:15px;
 }
 
 .list-element-wrapper{
-	border-color: #555555;
-	border-style: solid;
-	border-radius: 4px;
-	border-width: 1px;
+	
 	
 
 }
 .list-element{
 	list-style-type: none;
+	margin-bottom: 15px;
+}
+.list-o-rama{
+	margin-left: 0px;
+}
+.list-element-header{
+	cursor: pointer;
+	
 }
