--- a/style.css
+++ b/style.css
@@ -82,26 +82,45 @@ a{
 .showhide{
 	display: none;
 	border-color: #555555;
-	border-style: solid;
-	border-radius: 4px;
+	border-top-style: solid;
 	border-width: 1px;
-    background-color: #FFFFFF;
+	width:100%;
 	margin-top:15px;
+	padding-top:15px;
 }
 
 .list-element-wrapper{
-	
+	padding: 15px;
+	border-color: #BBBBBB;
+	background-color: #DDDDDD;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 3px;
 	
 
 }
 .list-element{
 	list-style-type: none;
-	margin-bottom: 15px;
+	margin-bottom: 7px;
+	margin-bottom: 7px;
+	margin-left: 15px;
+	margin-right: 15px;
+	border-radius: 4px;
+	border-color: #888888;
+	border-width: 1px;
+
 }
 .list-o-rama{
-	margin-left: 0px;
+	padding-left: 0px;
 }
 .list-element-header{
 	cursor: pointer;
-	
+
+}
+.list-element-row{
+	margin-bottom: 15px;
+}
+.list-element-col{
+	margin-right: 15px;
+	display: inline;
 }
