--- a/pub/style.css
+++ b/pub/style.css
@@ -1,5 +1,3 @@
-
-;
 #wrapper{
 	display: inline;
 }
@@ -80,4 +78,49 @@ a{
   color: #FFFFFF;
   text-align: center;
 
+}
+.showhide{
+	display: none;
+	border-color: #555555;
+	border-top-style: solid;
+	border-width: 1px;
+	width:100%;
+	margin-top:15px;
+	padding-top:15px;
+}
+
+.list-element-wrapper{
+	padding: 15px;
+	border-color: #BBBBBB;
+	background-color: #DDDDDD;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 3px;
+	
+
+}
+.list-element{
+	list-style-type: none;
+	margin-bottom: 7px;
+	margin-bottom: 7px;
+	margin-left: 15px;
+	margin-right: 15px;
+	border-radius: 4px;
+	border-color: #888888;
+	border-width: 1px;
+
+}
+.list-o-rama{
+	padding-left: 0px;
+}
+.list-element-header{
+	cursor: pointer;
+
+}
+.list-element-row{
+	margin-bottom: 15px;
+}
+.list-element-col{
+	margin-right: 15px;
+	display: inline;
 }
